--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,13 @@
 {
   "root": true,
   "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended-type-checked",
     "next/core-web-vitals",
     "prettier"
-  ]
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  }
 }
