--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "20.10.0"
   }
 }
