--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "[markdown]": {
     "files.trimTrailingWhitespace": false
-  }
+  },
+  "markuplint.enable": true
 }
