--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "markuplint": "markuplint \"./**/*.tsx\""
   },
   "dependencies": {
     "next": "14.0.3",
@@ -14,6 +15,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@markuplint/jsx-parser": "^3.12.0",
+    "@markuplint/react-spec": "^3.13.0",
     "@types/node": "^20.10.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,6 +28,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "markuplint": "^3.15.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
