Markuplintの設定を変更

--- a/.markuplintrc
+++ b/.markuplintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "markuplint:recommended"
+    "markuplint:recommended-react"
   ],
   "specs": {
     ".tsx$": "@markuplint/react-spec"
