Contentlayerを導入して記事を出力

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "ignorePatterns": ["next.config.js"],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
       "error",
