--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "next": "14.0.4",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
