--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "next": "14.0.4",
