next/linkとnext/imageはラッパーコンポーネントを使うようにルールを追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "plugins": ["unused-imports"],
+  "plugins": ["unused-imports", "strict-dependencies"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended-type-checked",
@@ -49,6 +49,25 @@
         "alphabetize": {
           "order": "asc"
         }
+      }
+    ],
+    // import先を制限する
+    "strict-dependencies/strict-dependencies": [
+      "error",
+      [
+        {
+          "module": "next/link",
+          "allowReferenceFrom": ["components/Link.tsx"],
+          "allowSameModule": false
+        },
+        {
+          "module": "next/image",
+          "allowReferenceFrom": ["components/Image.tsx"],
+          "allowSameModule": false
+        }
+      ],
+      {
+        "resolveRelativeImport": true
       }
     ]
   }
