--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.55.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-strict-dependencies": "^1.3.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
