--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "markuplint": "^3.15.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-prism-plus": "^1.6.3",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^3.0.1",
     "secretlint": "^8.0.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
