開発環境（Linterなど）の更新

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "plugins": ["@typescript-eslint", "unused-imports", "strict-dependencies"],
+  "plugins": ["unused-imports", "strict-dependencies"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended-type-checked",
