Propsの順番をソート

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "ignorePatterns": ["next.config.js"],
   "rules": {
+    "react/jsx-sort-props": "error",
     "@typescript-eslint/no-unused-vars": [
       "error",
       { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" } // _ で始まる変数は未使用でもエラーにしない
