--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tailwindcss/typography": "^0.5.10",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
