--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "contentlayer.config.ts",
     ".contentlayer/generated",
   ],
   "exclude": ["node_modules"],
