--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
-  "printWidth": 100,
-  "tabWidth": 2,
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "arrowParens": "always"
+	"printWidth": 100,
+	"tabWidth": 2,
+	"semi": true,
+	"trailingComma": "all",
+	"singleQuote": true,
+	"arrowParens": "always",
+	"useTabs": true
 }
