--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@heroicons/react": "^2.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@tailwindcss/typography": "^0.5.10",
+		"@vercel/analytics": "^1.4.1",
 		"contentlayer": "^0.3.4",
 		"date-fns": "^2.30.0",
 		"next": "14.2.10",
